<resources>
    <string name="app_name">Rock Paper Scissors</string>

    <!-- radio button labels / output strings -->
    <string name="rad_rock">Rock</string>
    <string name="rad_paper">Paper</string>
    <string name="rad_scissors">Scissors</string>

    <!-- urgent / not urgent -->
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>

    <string name="select_message">Select one:</string>
    <string name="message_label">Received message</string>
    <string name="undefined">Undefined</string>

    <!-- the button labels -->
    <string name="send">Send</string>
    <string name="close">Play Again</string>

    <!-- the activity labels -->
    <string name="input_activity">Input Activity</string>
    <string name="output_activity">Output Activity</string>

    <!-- the floating label -->
    <string name="sheridan">Upma, 2020</string>
    <string name="You">Player: \u0020</string>
    <string name="Computer">Computer: \u0020</string>

</resources>